# thalassa-analytics

./: .bruin.yml.example  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  runtime_config.py
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml.example
dashboard/: app.py
dashboard/intelligence/: __init__.py  bigquery_runtime.py  config.py  detector.py  generator.py  llm_client.py  models.py  orchestrator.py  panel.py  repositories.py  service.py  writer.py
dashboard/intelligence/agents/: __init__.py  detector_agent.py  generation_agent.py  reporting_agent.py  snapshot_agent.py
dashboard/intelligence/models/: __init__.py  schemas.py  state.py
docs/: agent_panel.md  architecture.md  course_requirements.md  thalassa_queries.sql
infra/: README.md  apis.tf  artifact_registry.tf  bigquery.tf  iam.tf  locals.tf  outputs.tf  secrets.tf  service_accounts.tf  terraform.tfvars.example  variables.tf
notebooks/: thalassa_api_exploration.ipynb  thalassa_exploration.ipynb
pipeline/: pipeline.yml
pipeline/assets/ingestion/: raw_sailing_traffic.py
pipeline/assets/marts/: dim_port.sql  dim_route.sql  dim_route_pair.sql  fct_port_activity_daily.sql  fct_port_activity_monthly.sql  fct_port_activity_weekly.sql  fct_route_traffic_daily.sql  fct_route_traffic_monthly.sql  fct_route_traffic_weekly.sql
pipeline/assets/reports/: auto_panel_snapshot_writer.py  intelligence_snapshots.sql  row_counts_daily.sql  row_counts_monthly.sql  (+2 more)
scripts/: generate_auto_panel_snapshot.py  set_dataset.ps1  set_dataset.sh  sync_bruin_dataset.py
(+1 files in other folders)
