[project]
name = "thalassa"
version = "0.1.0"
description = "Local Bruin, DuckDB, and Streamlit project for Greek sailing traffic analytics."
requires-python = ">=3.11"
dependencies = [
    "db-dtypes>=1.4.3",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-bigquery-storage>=2.36.2",
    "pandas>=2.2",
    "pyarrow>=20.0.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.7",
    "requests>=2.32",
    "streamlit>=1.44",
    "streamlit-option-menu>=0.4.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.44",
    "streamlit-option-menu>=0.4.0",
]
notebooks = [
    "jupyter>=1.1.1",
    "duckdb>=1.2",
]
local = [
    "duckdb>=1.2",
    "streamlit>=1.44",
    "streamlit-option-menu>=0.4.0",
    "jupyter>=1.1.1",
]
